syntax = "proto3";
package main;

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 2;
}

service Hello {
  rpc SayHello (HelloRequest) returns (HelloResponse) {} 
}
